syntax = "proto3";

option go_package = "github.com/guodongq/quickstart/proto/helloworld/v1;helloworldv1";

package helloworld.v1;

service Greeter {
rpc SayHello(HelloRequest) returns (HelloReply){}
}

message HelloRequest {
	string name = 1;
}

message HelloReply{
	string message = 1;
}
